--- a/trails.html
+++ b/trails.html
@@ -1,67 +1,51 @@
-<html>
+<!doctype html>
+<html lang="en">
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Trails</title>
-    <link rel="stylesheet" href="main.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="trails.css">
 </head>
 <body>
-    <div class="middle">
-        <h1>Trails</h1>
-        <label>
-            <input id="zugspitz1" type="radio" name="radio" checked />
-            <div class="front-end box">
-                <span>Zugspitz 1</span>
-                <span>40 km</span>
-            </div>
-        </label>
+    <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                Trails
+            </a>
+        </div>
+    </nav>
 
-        <label>
-            <input id="zugspitz2" type="radio" name="radio" />
-            <div class="back-end box">
-                <span>Zugspitz 2</span>
-            </div>
-        </label>
+    <div class="container-fluid">
 
-        <label>
-            <input id="trail3" type="radio" name="radio" />
-            <div class="back-end box">
-                <span>Trail 3</span>
-            </div>
-        </label>
+        <div class="row">
+            <div id="trailContainer" class="col-6 col-sm-5 col-md-4 col-lg-3">
 
-        <label>
-            <input id="trail4" type="radio" name="radio" />
-            <div class="back-end box">
-                <span>Trail 4</span>
             </div>
-        </label>
 
-        <label>
-            <input id="trail5" type="radio" name="radio" />
-            <div class="back-end box">
-                <span>Trail 5</span>
+            <div id="detailsContainer" class="col m-3">
+                <div class="card">
+                    <div class="card-header" id="detailsCardHeader"></div>
+                    <div class="card-body">
+                        <table class="table table-hover">
+                            <tr>
+                                <th>Strecke</th>
+                                <td id="detailsDistance">0 km</td>
+                            </tr>
+                            <tr>
+                                <th>Höhenmeter</th>
+                                <td id="detailsHeight">0 hm</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
             </div>
-        </label>
-
-        <label>
-            <input id="trail6" type="radio" name="radio" />
-            <div class="back-end box">
-                <span>Trail 6</span>
-            </div>
-        </label>
-
-        <label>
-            <input id="trail7" type="radio" name="radio" />
-            <div class="back-end box">
-                <span>Trail 7</span>
-            </div>
-        </label>
-
-        <label>
-            <input id="trail8" type="radio" name="radio" />
-            <div class="back-end box">
-                <span>Trail 8</span>
-            </div>
-        </label>
+        </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="trails.js"></script>
+    <script src="nav.js"></script>
 </body>
 </html>
