elevation in der navigation

--- a/trails.html
+++ b/trails.html
@@ -63,6 +63,7 @@
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
         // initialize Leaflet
         const map = L.map('map').setView({ lon: 0, lat: 0 }, 2);
