--- a/trails.html
+++ b/trails.html
@@ -12,8 +12,8 @@
 
 
 </head>
-<body class="vh-100" style="overflow:hidden">
-    <div class="container-v-flex vh-100">
+<body>
+    <div>
         <nav class="navbar bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTrailList" aria-controls="offcanvasTrailList" href="#">
@@ -23,13 +23,13 @@
             </div>
         </nav>
 
-        <div class="content-v-flex">
-            <div class="row h-100">
+        <div>
+            <div class="row">
                 <div id="detailsContainer" class="col m-3">
-                    <div class="card h-100">
+                    <div class="card">
                         <div class="card-header"><span id="detailsCardHeaderText"></span> <a id="detailsCardHeaderLink" class="btn btn-primary float-end" href="#" role="button" target="_blank">zum Veranstalter</a></div>
-                        <div class="card-body h-100">
-                            <div class="container-v-flex h-100">
+                        <div class="card-body">
+                            <div>
 
                                 <table class="table table-hover">
                                     <tr>
@@ -42,7 +42,9 @@
                                     </tr>
                                 </table>
 
-                                <div id="map" class="content-v-flex"></div>
+                                <canvas id="elevationChart" class="ratio ratio-1x1 max-vh-50"></canvas>
+
+                                <div id="map" class="ratio ratio-1x1 max-vh-75"></div>
                             </div>
                         </div>
                     </div>
@@ -65,6 +67,48 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
+        const ctx = document.getElementById("elevationChart");
+        const elevationChart = new Chart(ctx, {
+            type: 'line',
+            data: {
+                labels: [],
+                datasets: [{
+                    label: 'hm',
+                    data: [],
+                    borderWidth: 0,
+                    backgroundColor: '#0d6efd',
+                    fill: {
+                        target: 'origin'
+                    }
+                }]
+            },
+            options: {
+                layout: {
+                    autoPadding: false
+                },
+                scales: {
+                    y: {
+                        display: true,
+                        beginAtZero: false
+                    },
+                    x: {
+                        display: false
+                    }
+                },
+                plugins: {
+                    legend: {
+                        display: false
+                    }
+                },
+                elements: {
+                    point: {
+                        pointRadius: 0
+                    }
+                }
+            }
+        });
+
+
         // initialize Leaflet
         const map = L.map('map').setView({ lon: 0, lat: 0 }, 2);
 
