--- a/trails.html
+++ b/trails.html
@@ -42,6 +42,19 @@
                                     </tr>
                                 </table>
 
+                                <div id="carouselExampleAutoplaying" class="carousel slide">
+                                    <div id="album" class="carousel-inner">
+                                    </div>
+                                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">Previous</span>
+                                    </button>
+                                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">Next</span>
+                                    </button>
+                                </div>
+
                                 <canvas id="elevationChart" class="ratio ratio-1x1 max-vh-50"></canvas>
 
                                 <div id="map" class="ratio ratio-1x1 max-vh-75"></div>
