--- a/trails.html
+++ b/trails.html
@@ -84,10 +84,9 @@
         const elevationChart = new Chart(ctx, {
             type: 'line',
             data: {
-                labels: [],
                 datasets: [{
                     label: 'hm',
-                    data: [],
+                    data: [{ x: 0, y: 0 }, { x: 1, y: 1 }],
                     borderWidth: 0,
                     backgroundColor: '#0d6efd',
                     fill: {
@@ -97,7 +96,7 @@
             },
             options: {
                 layout: {
-                    autoPadding: false
+                    autoPadding: true
                 },
                 scales: {
                     y: {
@@ -105,7 +104,8 @@
                         beginAtZero: false
                     },
                     x: {
-                        display: false
+                        type: 'linear',
+                        display: true
                     }
                 },
                 plugins: {
