tooltip im chart

--- a/trails.html
+++ b/trails.html
@@ -95,6 +95,10 @@
                 }]
             },
             options: {
+                interaction: {
+                    intersect: false,
+                    mode: 'index',
+                },
                 layout: {
                     autoPadding: true
                 },
